// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "StartAt": "return \\"hello world\\"",
  "States": Object {
    "return \\"hello world\\"": Object {
      "End": true,
      "Result": "hello world",
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;

exports[` 2`] = `
Object {
  "StartAt": "return await func()",
  "States": Object {
    "return await func()": Object {
      "End": true,
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$",
      "Type": "Task",
    },
  },
}
`;

exports[` 3`] = `
Object {
  "StartAt": "0_tmp = await func(event.str)",
  "States": Object {
    "0_tmp = await func(event.str)": Object {
      "InputPath": "$.str",
      "Next": "return 0_tmp.str",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[` 4`] = `
Object {
  "StartAt": "0_tmp = await func(\\"hello world\\")",
  "States": Object {
    "0_tmp = await func(\\"hello world\\")": Object {
      "Next": "return 0_tmp.str",
      "Parameters": "hello world",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[` 5`] = `
Object {
  "StartAt": "0_tmp = await func({str: \\"hello world\\"})",
  "States": Object {
    "0_tmp = await func({str: \\"hello world\\"})": Object {
      "Next": "return 0_tmp.str",
      "Parameters": Object {
        "str": "hello world",
      },
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[` 6`] = `
Object {
  "StartAt": "obj = {str: \\"hello world\\"}",
  "States": Object {
    "0_tmp = await func(obj)": Object {
      "InputPath": "$.obj",
      "Next": "return 0_tmp.str",
      "Resource": "__REPLACED_TOKEN",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "obj = {str: \\"hello world\\"}": Object {
      "Next": "0_tmp = await func(obj)",
      "Parameters": Object {
        "str": "hello world",
      },
      "ResultPath": "$.obj",
      "Type": "Pass",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda $AWS invoke 1`] = `
Object {
  "StartAt": "obj = {str: \\"hello world\\"}",
  "States": Object {
    "0_tmp = await $AWS.Lambda.Invoke({Function: func, Payload: obj})": Object {
      "Next": "return 0_tmp.Payload.str",
      "Parameters": Object {
        "FunctionName": "sfnStack-parent6func5A43B84B-37d6c8c5",
        "Payload.$": "$.obj",
      },
      "Resource": "arn:aws:states:::lambda:invoke",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "obj = {str: \\"hello world\\"}": Object {
      "Next": "0_tmp = await $AWS.Lambda.Invoke({Function: func, Payload: obj})",
      "Parameters": Object {
        "str": "hello world",
      },
      "ResultPath": "$.obj",
      "Type": "Pass",
    },
    "return 0_tmp.Payload.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.Payload.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda 1`] = `
Object {
  "StartAt": "return await func()",
  "States": Object {
    "return await func()": Object {
      "End": true,
      "Resource": "arn:aws:lambda:us-east-1:000000000000:function:sfnStack-parent1func2654F7BF-e33310f6",
      "ResultPath": "$",
      "Type": "Task",
    },
  },
}
`;

exports[`call lambda with object literal parameter 1`] = `
Object {
  "StartAt": "0_tmp = await func({str: \\"hello world\\"})",
  "States": Object {
    "0_tmp = await func({str: \\"hello world\\"})": Object {
      "Next": "return 0_tmp.str",
      "Parameters": Object {
        "str": "hello world",
      },
      "Resource": "arn:aws:lambda:us-east-1:000000000000:function:sfnStack-parent4funcEEECE974-d9fe7ac1",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with object literal parameter: call lambda with object literal parameter 1`] = `
Object {
  "StartAt": "0_tmp = await func({str: \\"hello world\\"})",
  "States": Object {
    "0_tmp = await func({str: \\"hello world\\"})": Object {
      "Next": "return 0_tmp.str",
      "Parameters": Object {
        "str": "hello world",
      },
      "Resource": "arn:aws:lambda:us-east-1:000000000000:function:sfnStack-parent4funcEEECE974-d9fe7ac1",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with object reference parameter 1`] = `
Object {
  "StartAt": "obj = {str: \\"hello world\\"}",
  "States": Object {
    "0_tmp = await func(obj)": Object {
      "InputPath": "$.obj",
      "Next": "return 0_tmp.str",
      "Resource": "arn:aws:lambda:us-east-1:000000000000:function:sfnStack-parent5funcA141DA6B-c4293018",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "obj = {str: \\"hello world\\"}": Object {
      "Next": "0_tmp = await func(obj)",
      "Parameters": Object {
        "str": "hello world",
      },
      "ResultPath": "$.obj",
      "Type": "Pass",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with object reference parameter: call lambda with object reference parameter 1`] = `
Object {
  "StartAt": "obj = {str: \\"hello world\\"}",
  "States": Object {
    "0_tmp = await func(obj)": Object {
      "InputPath": "$.obj",
      "Next": "return 0_tmp.str",
      "Resource": "arn:aws:lambda:us-east-1:000000000000:function:sfnStack-parent5funcA141DA6B-c4293018",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "obj = {str: \\"hello world\\"}": Object {
      "Next": "0_tmp = await func(obj)",
      "Parameters": Object {
        "str": "hello world",
      },
      "ResultPath": "$.obj",
      "Type": "Pass",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with string parameter 1`] = `
Object {
  "StartAt": "0_tmp = await func(\\"hello world\\")",
  "States": Object {
    "0_tmp = await func(\\"hello world\\")": Object {
      "Next": "return 0_tmp.str",
      "Parameters": "hello world",
      "Resource": "arn:aws:lambda:us-east-1:000000000000:function:sfnStack-parent3funcA2B27922-97ca43ec",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with string parameter: call lambda with string parameter 1`] = `
Object {
  "StartAt": "0_tmp = await func(\\"hello world\\")",
  "States": Object {
    "0_tmp = await func(\\"hello world\\")": Object {
      "Next": "return 0_tmp.str",
      "Parameters": "hello world",
      "Resource": "arn:aws:lambda:us-east-1:000000000000:function:sfnStack-parent3funcA2B27922-97ca43ec",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with string reference 1`] = `
Object {
  "StartAt": "0_tmp = await func(event.str)",
  "States": Object {
    "0_tmp = await func(event.str)": Object {
      "InputPath": "$.str",
      "Next": "return 0_tmp.str",
      "Resource": "arn:aws:lambda:us-east-1:000000000000:function:sfnStack-parent2funcB1B31DBB-b321cd1a",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda with string reference: call lambda with string reference 1`] = `
Object {
  "StartAt": "0_tmp = await func(event.str)",
  "States": Object {
    "0_tmp = await func(event.str)": Object {
      "InputPath": "$.str",
      "Next": "return 0_tmp.str",
      "Resource": "arn:aws:lambda:us-east-1:000000000000:function:sfnStack-parent2funcB1B31DBB-b321cd1a",
      "ResultPath": "$.0_tmp",
      "Type": "Task",
    },
    "return 0_tmp.str": Object {
      "End": true,
      "OutputPath": "$.0_tmp.str",
      "Type": "Pass",
    },
  },
}
`;

exports[`call lambda: call lambda 1`] = `
Object {
  "StartAt": "return await func()",
  "States": Object {
    "return await func()": Object {
      "End": true,
      "Resource": "arn:aws:lambda:us-east-1:000000000000:function:sfnStack-parent1func2654F7BF-e33310f6",
      "ResultPath": "$",
      "Type": "Task",
    },
  },
}
`;

exports[`simple 1`] = `
Object {
  "StartAt": "return \\"hello world\\"",
  "States": Object {
    "return \\"hello world\\"": Object {
      "End": true,
      "Result": "hello world",
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;

exports[`simple: simple 1`] = `
Object {
  "StartAt": "return \\"hello world\\"",
  "States": Object {
    "return \\"hello world\\"": Object {
      "End": true,
      "Result": "hello world",
      "ResultPath": "$",
      "Type": "Pass",
    },
  },
}
`;
